# memora

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  code_format.yml
docs/: advanced_usage.md  changelog.md  getting_started.md  index.md
docs/api/: index.md
docs/api/agent/: memora.md
docs/api/graph_db/: base.md  neo4j.md
docs/api/llm_backends/: azure_openai.md  base.md  groq.md  openai.md  together.md
docs/api/prompts/: extraction.md  filter.md  search.md
docs/api/schema/: extraction.md  models.md  storage.md
docs/api/vector_db/: base.md  memory_search_scope.md  qdrant.md
examples/: low_latency_via_tool.py  personal_assistant.py  simple_chatbot.py
memora/: __init__.py
memora/agent/: main.py
memora/graph_db/: __init__.py  base.py
memora/graph_db/neo4j/: __init__.py  agent.py  interaction.py  interface.py  memory.py  organization.py  user.py
memora/llm_backends/: __init__.py  azure_openai_backend_llm.py  base.py  groq_backend_llm.py  kluster_backend_llm.py  openai_backend_llm.py  together_backend_llm.py
memora/prompts/: __init__.py  filter_retrieved_memories.py  memory_extraction.py  memory_search_from_msg.py  update_memory_store_prompt.py
memora/schema/: __init__.py  extraction_schema.py  models.py  save_memory_schema.py
memora/vector_db/: __init__.py  base.py  qdrant.py
