[tool.poetry]
name = "memora-agent"
version = "0.1.0"
description = "Memora is an agent designed to give every personalized AI with human memory."
authors = ["Jonathan Okorie <jonathan@elzai.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
shortuuid = "1.0.13"
neo4j = "5.20.0"
neo4j-rust-ext = "5.20.0.0"
pydantic = "2.10.4"
python-dotenv = "1.0.1"
typing-extensions = "4.12.2"
groq = "0.13.1"
openai = "1.55.3"
together = "1.3.10"
qdrant-client = "1.12.1"
fastembed = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
